<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/m_my_location"
        android:title="@string/my_location"/>
    <item
        android:id="@+id/m_en_dis_zoom"
        android:title="@string/disable_enable_motion">
    </item>
    <item
        android:id="@+id/m_m_barcode"
        android:title="@string/scan_customer_barcode">
    </item>
    <item
        android:id="@+id/m_search"
        android:title="@string/search">
    </item>
    <item android:title="@string/map_manipulate">
        <menu>
            <group
                android:id="@+id/mg_manipipulate"
                android:checkableBehavior="single" >
                <item
                    android:id="@+id/mi_building_select"
                    android:checked="true"
                    android:title="@string/building_select"/>
                <item
                    android:id="@+id/mi_cus_meter"
                    android:title="@string/cus_meter"/>
                <item
                    android:id="@+id/mi_distinct_meter"
                    android:title="@string/distinct_meter"/>
            </group>
        </menu>
    </item>

</menu>